--- a/Java_HW/HW/bin/day20_HW23/Question_42.ipynb
+++ b/Java_HW/HW/bin/day20_HW23/Question_42.ipynb
@@ -36,10 +36,13 @@
     "y = int(location[-1])\n",
     "possible = 0\n",
     "\n",
-    "if ((x-1) > 0) & ((y-2) > 0):\n",
+    "if ((x-1) > 0) & ((y-1) > 0):\n",
     "    possible += 2\n",
-    "\n",
-    "if ((x+1) < 9) & ((y+2) > 0):\n",
+    "if ((x+1) < 9) & ((y-1) > 0):\n",
+    "    possible += 2\n",
+    "if ((x-1) < 9) & ((y+1) > 0):\n",
+    "    possible += 2\n",
+    "if ((x+1) < 9) & ((y+1) > 0):\n",
     "    possible += 2\n",
     "\n",
     "print(f'나이트는 {possible}가지의 경로로 이동이 가능합니다')"
